force-app/main/default/objects/Technician_Skill__c/Technician_Skill__c.object-meta.xml
<CustomObject>
    <label>Technician Skill</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Technician Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technician Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>