force-app/main/default/objects/Technician_Skill__c/fields/Proficiency__c.field-meta.xml
<CustomField>
    <fullName>Proficiency__c</fullName>
    <label>Proficiency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trainee</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>