force-app/main/default/objects/Technician_Skill__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <label>Technician</label>
    <referenceTo>Technician__c</referenceTo>
    <relationshipLabel>Technician Skills</relationshipLabel>
    <relationshipName>Technician_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>